# applemusic-controller

./: .gitignore  README.md  pyproject.toml
packaging/: README_en.txt  README_ja.txt  Readme.txt  launcher.py
src/amc/: __init__.py  devices.py  dsp.py  gui.py  lyrics.py  pipeline.py  routing.py  seek.py  smtc.py
